// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Final 1`] = `
Array [
  Object {
    "data": Object {
      "age": 30,
      "name": "John Doe",
    },
    "integrity": "2ac4013c25ea96bed7550369750e3a7380cebc30",
    "type": "put",
  },
]
`;

exports[`Final 2`] = `
Array [
  Object {
    "data": Object {
      "age": 30,
      "name": "John Doe",
    },
    "integrity": "2ac4013c25ea96bed7550369750e3a7380cebc30",
    "type": "put",
  },
  Object {
    "data": Object {
      "alpha": "foo",
    },
    "integrity": "b4c307fc7d639b250c45e9114dee6e71af65ab7a",
    "type": "put",
  },
  Object {
    "data": Object {
      "alpha": "bar",
      "omega": "baz",
    },
    "integrity": "01edfb0e1426fd641f7937f2118cee13d454644f",
    "type": "put",
  },
]
`;

exports[`Final 3`] = `
Array [
  Object {
    "__rm": Array [
      "age",
      "name",
    ],
  },
  Object {
    "__rm": Array [
      "alpha",
    ],
  },
  Object {
    "__rm": Array [
      "omega",
    ],
    "alpha": "foo",
  },
]
`;

exports[`Final 4`] = `
Array [
  Object {
    "__rm": Array [
      "age",
      "name",
    ],
  },
  Object {
    "__rm": Array [
      "alpha",
    ],
  },
]
`;

exports[`First commit 1`] = `
Array [
  Object {
    "data": Object {
      "age": 30,
      "name": "John Doe",
    },
    "integrity": "2ac4013c25ea96bed7550369750e3a7380cebc30",
    "type": "put",
  },
]
`;

exports[`Put Jane Doe 1`] = `
Object {
  "age": 30,
  "first": "ok",
  "name": "Jane Doe",
}
`;

exports[`Put John Doe 1`] = `
Object {
  "age": 30,
  "first": "ok",
  "name": "John Doe",
}
`;

exports[`Put John Doe 2`] = `
Object {
  "age": 30,
  "name": "John Doe",
}
`;

exports[`Put Mary Doe 1`] = `
Object {
  "age": 30,
  "first": "ok",
  "name": "Mary Doe",
}
`;

exports[`Put Mary Doe 2`] = `
Object {
  "name": "Mary Doe",
}
`;

exports[`Put first data 1`] = `
Object {
  "age": 30,
  "first": "ok",
  "name": "John",
}
`;

exports[`Rollback 1`] = `
Object {
  "age": 30,
  "first": "ok",
  "name": "John Doe",
}
`;

exports[`Rollback Mary Doe 1`] = `
Object {
  "age": 30,
  "first": "ok",
  "name": "Jane Doe",
}
`;

exports[`Rollback Mary Doe 2`] = `
Object {
  "name": "Jane Doe",
}
`;

exports[`Rollback second commit 1`] = `
Array [
  Object {
    "data": Object {
      "age": 30,
      "name": "John Doe",
    },
    "integrity": "2ac4013c25ea96bed7550369750e3a7380cebc30",
    "type": "put",
  },
]
`;

exports[`Rollback second commit 2`] = `
Object {
  "age": 30,
  "first": "ok",
  "name": "John Doe",
}
`;

exports[`Rollback second commit 3`] = `Object {}`;

exports[`Rollforth 1`] = `
Object {
  "age": 30,
  "first": "ok",
  "name": "Jane Doe",
}
`;

exports[`Second Commit 1`] = `Object {}`;

exports[`Second Commit 2`] = `
Array [
  Object {
    "data": Object {
      "age": 30,
      "name": "John Doe",
    },
    "integrity": "2ac4013c25ea96bed7550369750e3a7380cebc30",
    "type": "put",
  },
  Object {
    "data": Object {
      "name": "Jane Doe",
    },
    "integrity": "b4c307fc7d639b250c45e9114dee6e71af65ab7a",
    "type": "put",
  },
]
`;

exports[`Second Commit 3`] = `
Object {
  "age": 30,
  "first": "ok",
  "name": "Jane Doe",
}
`;

exports[`Test 1`] = `
Array [
  Object {
    "data": Object {
      "a": "1",
    },
    "integrity": "bf21a9e8fbc5a3846fb05b4fa0859e0917b2202f",
    "message": "commit a:1",
    "type": "put",
  },
  Object {
    "data": Object {
      "b": "1",
    },
    "integrity": "1708d735828d488e7eba7cb61e27c30b8c2b5178",
    "message": "commit b:1",
    "type": "put",
  },
  Object {
    "data": Object {
      "c": "1",
      "d": Object {
        "a": "A",
        "b": "B",
      },
    },
    "integrity": "1d9275ffc7f21f853243aea307714b65173b8360",
    "message": "commit c:1, d:1",
    "type": "put",
  },
]
`;

exports[`Test 2`] = `
Object {
  "changed_keys": Array [
    "alpha.alpha.alpha.omega",
    "alpha.alpha.alpha.lambda",
  ],
  "created_keys": Array [
    "alpha.alpha.alpha.gamma",
    "alpha.alpha.alpha.pi",
    "alpha.alpha.zeta",
    "alpha.beta",
    "alpha.delta",
    "beta.alpha",
    "beta.sigma.sigma",
    "beta.sigma.delta",
    "beta.beta.beta",
    "beta.beta.pi",
  ],
  "rollback": Object {
    "alpha": Object {
      "__rm": Array [
        "beta",
        "delta",
      ],
      "alpha": Object {
        "__rm": Array [
          "zeta",
        ],
        "alpha": Object {
          "__rm": Array [
            "gamma",
            "pi",
          ],
          "lambda": "sampi",
          "omega": "omega",
        },
      },
    },
    "beta": Object {
      "__rm": Array [
        "alpha",
      ],
      "beta": Object {
        "__rm": Array [
          "beta",
          "pi",
        ],
      },
      "sigma": Object {
        "__rm": Array [
          "sigma",
          "delta",
        ],
      },
    },
  },
}
`;
